# DS-User-Guide

./: .gitignore  AGENTS.md  AI-DIFF--part-1a.diff  AI-DIFF.diff  AI-PROMPT.md  CONTRIBUTING.md  DEVELOPING.md  Dockerfile  Makefile  ORGANIZING.md  PUBLISHING.md  README.md  TESTING.md  changes.html  docker-compose.yml  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: developer.md
.github/commit-messages/: requirements_update.txt
.github/workflows/: build-pprd.yml  build.yml  netlify-create-branch.yml  netlify-delete-branch.yml  reqs-sync.yml  reqs-validate.yml  requirements-validate.yml  requirments-sync.yml  update-reqs.yml  update-requirements.txt  update-requirements.yml  validate-reqs.yml  validate-requirements.yml
ai/PR 155/: AI-DIFF--part-1b.diff  AI-DIFF--part-2.diff  AI-DIFF--part-3.diff  AI-PROMPT.md  breaking-changes-part1a.md  breaking-changes-part1b.md  breaking-changes-part2.md  breaking-changes-part3.md  breaking-changes-summary.md
docs/: analysis.md
docs/css/: ds-docs.css
docs/curating/: index.md
docs/usecases/: README.md
user-guide/: REORG.md  account-help.md  how-to-cite.md  index.md  mkdocs.yml  training.md
user-guide/analysis/: hvsrweb.md  overview.md
user-guide/css/: README.md  ds-user-guide.css  import.css  inbox.css
user-guide/curating/: bestpractices.md  github-cite-this-repo.md  guides.md  policies.md
user-guide/datadepotrepo/: about.md  resources.md
user-guide/dictionary/: experimental.md  field.md  hybrid.md
(+241 files in other folders)
